[tool.poetry]
name = "001-streamlit-redaction-improver"
version = "0.1.0"
description = ""
authors = ["julio colomer <info@aiaccelera.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.9"
streamlit = "^1.37.0"
langchain = "^0.2.11"
langchain-openai = "^0.1.19"
chromadb = "^0.5.23"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
